[gd_scene load_steps=15 format=3 uid="uid://cuqy1l8g8a877"]

[ext_resource type="Script" uid="uid://cfxi0r5rs5p4s" path="res://npcs/enemy_dummy.gd" id="1_3umq2"]
[ext_resource type="PackedScene" uid="uid://dc0ycck3etk38" path="res://weapons/uniform_health.tscn" id="1_ltfn3"]
[ext_resource type="Script" uid="uid://b8r7jremcxodp" path="res://npcs/mesh_face_camera.gd" id="2_s3y7n"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7w2jb"]
height = 1.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ltfn3"]
height = 1.0
radius = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7w2jb"]
albedo_color = Color(0.0723588, 0.194387, 0.628038, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_ltfn3"]
material = SubResource("StandardMaterial3D_7w2jb")
height = 1.5
radial_segments = 16
rings = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ltfn3"]
albedo_color = Color(0.0693356, 0.0921118, 0.0684104, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_s3y7n"]
material = SubResource("StandardMaterial3D_ltfn3")
top_radius = 0.2
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 0

[sub_resource type="Curve" id="Curve_s3y7n"]
_data = [Vector2(0, 0), 0.0, 0.705022, 0, 0, Vector2(1, 0.461949), 1.21729, 0.0, 0, 0]
point_count = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3umq2"]
albedo_color = Color(0.918616, 0.762351, 0.610828, 1)

[sub_resource type="TextMesh" id="TextMesh_ltfn3"]
material = SubResource("StandardMaterial3D_3umq2")
text = "20"
font_size = 25
pixel_size = 0.05
depth = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8ll6o"]
albedo_color = Color(0.398926, 0.530106, 0.673585, 1)

[sub_resource type="TextMesh" id="TextMesh_3umq2"]
material = SubResource("StandardMaterial3D_8ll6o")
text = "20"
font_size = 25
pixel_size = 0.05
depth = 0.2

[node name="EnemyDummy" type="StaticBody3D" groups=["Damageable"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_3umq2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
shape = SubResource("CylinderShape3D_7w2jb")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_ltfn3")

[node name="mesh_main" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
mesh = SubResource("CylinderMesh_ltfn3")

[node name="mesh_post" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CylinderMesh_s3y7n")

[node name="UniformHealth" parent="." instance=ExtResource("1_ltfn3")]
armor_condition_block_rate = SubResource("Curve_s3y7n")

[node name="health_text" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
mesh = SubResource("TextMesh_ltfn3")
script = ExtResource("2_s3y7n")

[node name="armor_text" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
mesh = SubResource("TextMesh_3umq2")
script = ExtResource("2_s3y7n")
